--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,4 +4,4 @@ import Headshot from '~/components/headshot';
 
 # Logan McAnsh
 
-Making PWAs for [Powerley](https://www.powerley.com").
+Making PWAs for [Powerley](https://www.powerley.com).
