--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,4 +4,4 @@ import Headshot from '~/components/headshot';
 
 # Logan McAnsh
 
-Making PWAs for [Powerley](https://www.powerley.com).
+Making [PWAs](https://blog.powerley.com/utilities-are-giving-the-home-a-voice-and-a-brain/?utm_source=mcan.sh) for [Powerley](https://www.powerley.com).
